fixed light/dark mode!

--- a/stest.css
+++ b/stest.css
@@ -500,7 +500,4 @@ img {
     align-items: center;
 }
 
-.dark-mode {
-    background-color: black;
-    color: white;
-}
+
